--- a/report.html
+++ b/report.html
@@ -1629,22 +1629,22 @@ storage = function () {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,0,[],[1,0,9345],[],[[4,0,0,[],[1,48,8],[]],[5,0,0,[],[1,57,9287],[]]],[],[2,2,0,0]];
+window.output["suite"] = [1,2,3,0,[],[1,0,5892],[],[[4,0,0,[],[1,179,5711],[]]],[],[1,1,0,0]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*exerciseThree","*/Users/jfkoskinen/HAMK/TKM22/asiakprojektien_toteutt/Ohjelmistotest/SW-testing/exercise/exerciseThree.robot","*exercise/exerciseThree.robot","*Lue tiedostosta pingattavat osoitteet","*Selvitä silmukassa ip ja keskiarvo sekä luo vastaustiedosto"]);
+window.output["strings"] = window.output["strings"].concat(["*","*seleniumTesti","*/Users/jfkoskinen/HAMK/TKM22/asiakprojektien_toteutt/Ohjelmistotest/SW-testing/luento_3/seleniumTesti.robot","*luento_3/seleniumTesti.robot","*Facebook register"]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:00:09","fail":0,"label":"All Tests","pass":2,"skip":0}],[],[{"elapsed":"00:00:09","fail":0,"id":"s1","label":"exerciseThree","name":"exerciseThree","pass":2,"skip":0}]];
+window.output["stats"] = [[{"elapsed":"00:00:06","fail":0,"label":"All Tests","pass":1,"skip":0}],[],[{"elapsed":"00:00:06","fail":0,"id":"s1","label":"seleniumTesti","name":"seleniumTesti","pass":1,"skip":0}]];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1694373323435;
+window.output["baseMillis"] = 1694859554118;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 9363;
+window.output["generated"] = 5902;
 </script>
 <script type="text/javascript">
 window.output["expand_keywords"] = null;
