--- a/log.html
+++ b/log.html
@@ -1806,25 +1806,25 @@ function stopPropagation(event) {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,0,[],[1,0,5892],[],[[4,0,0,[],[1,179,5711],[[0,5,6,0,7,8,0,0,[1,180,2476],[[181,2,9]]],[0,10,11,0,12,13,0,0,[1,2657,1005],[[3661,2,14]]],[0,15,6,0,16,0,0,0,[1,3663,509],[]],[0,17,6,0,18,19,0,0,[1,4173,228],[[4175,2,20]]],[0,21,6,0,22,23,0,0,[1,4401,6],[[4406,2,24]]],[0,17,6,0,18,25,0,0,[1,4407,211],[[4408,2,26]]],[0,27,6,0,28,29,0,0,[1,4618,16],[[4620,2,30]]],[0,10,11,0,12,13,0,0,[1,4635,1005],[[5638,2,14]]],[0,17,6,0,18,31,0,0,[1,5642,225],[[5644,2,32]]],[0,27,6,0,28,33,0,0,[1,5869,20],[[5871,2,34]]]]]],[],[1,1,0,0]];
+window.output["suite"] = [1,2,3,0,[],[1,0,7771],[],[[4,0,0,[],[1,182,7585],[[0,5,6,0,7,8,0,0,[1,184,2379],[[185,2,9]]],[0,10,11,0,12,13,0,0,[1,2565,1002],[[3566,2,14]]],[0,15,6,0,16,0,0,0,[1,3568,519],[]],[0,17,6,0,18,19,0,0,[1,4088,227],[[4089,2,20]]],[0,21,6,0,22,23,0,0,[1,4315,6],[[4321,2,24]]],[0,17,6,0,18,25,0,0,[1,4322,213],[[4323,2,26]]],[0,27,6,0,28,29,0,0,[1,4536,16],[[4538,2,30]]],[0,10,11,0,12,13,0,0,[1,4552,1006],[[5555,2,14]]],[0,17,6,0,18,31,0,0,[1,5560,229],[[5563,2,32]]],[0,27,6,0,28,33,0,0,[1,5791,19],[[5793,2,34]]],[0,10,11,0,12,13,0,0,[1,5811,1006],[[6815,2,14]]],[0,17,6,0,18,35,0,0,[1,6819,242],[[6821,2,36]]],[0,37,6,0,38,39,0,0,[1,7062,236],[[7064,2,40]]],[0,17,6,0,18,41,0,0,[1,7299,230],[[7300,2,42]]],[0,37,6,0,38,43,0,0,[1,7531,235],[[7533,2,44]]]]]],[],[1,1,0,0]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*seleniumTesti","*/Users/jfkoskinen/HAMK/TKM22/asiakprojektien_toteutt/Ohjelmistotest/SW-testing/luento_3/seleniumTesti.robot","*luento_3/seleniumTesti.robot","*Facebook register","*Open Browser","*SeleniumLibrary","*<p>Opens a new browser instance to the optional <code>url\x3c/code>.\x3c/p>","*<a href=\"http://www.facebook.com/r.php\">http://www.facebook.com/r.php\x3c/a>","*Opening browser 'firefox' to base url '<a href=\"http://www.facebook.com/r.php\">http://www.facebook.com/r.php\x3c/a>'.","*Sleep","*BuiltIn","*<p>Pauses the test executed for the given time.\x3c/p>","*1","*Slept 1 second","*Maximize Browser Window","*<p>Maximizes current browser window.\x3c/p>","*Click Element","*<p>Click the element identified by <code>locator\x3c/code>.\x3c/p>","*<a href=\"xpath://button[@title='Allow\">xpath://button[@title='Allow\x3c/a> all cookies']","*Clicking element '<a href=\"xpath://button[@title='Allow\">xpath://button[@title='Allow\x3c/a> all cookies']'.","*Page Should Contain","*<p>Verifies that current page contains <code>text\x3c/code>.\x3c/p>","*Create a new account","*Current page contains text 'Create a new account'.","*name:firstname","*Clicking element 'name:firstname'.","*Input Text","*<p>Types the given <code>text\x3c/code> into the text field identified by <code>locator\x3c/code>.\x3c/p>","*name:firstname, Donald","*Typing text 'Donald' into text field 'name:firstname'.","*name:lastname","*Clicking element 'name:lastname'.","*name:lastname, Duck","*Typing text 'Duck' into text field 'name:lastname'."]);
+window.output["strings"] = window.output["strings"].concat(["*","*seleniumTesti","*/Users/jfkoskinen/HAMK/TKM22/asiakprojektien_toteutt/Ohjelmistotest/SW-testing/luento_3/seleniumTesti.robot","*luento_3/seleniumTesti.robot","*Facebook register","*Open Browser","*SeleniumLibrary","*<p>Opens a new browser instance to the optional <code>url\x3c/code>.\x3c/p>","*<a href=\"http://www.facebook.com/r.php\">http://www.facebook.com/r.php\x3c/a>","*Opening browser 'firefox' to base url '<a href=\"http://www.facebook.com/r.php\">http://www.facebook.com/r.php\x3c/a>'.","*Sleep","*BuiltIn","*<p>Pauses the test executed for the given time.\x3c/p>","*1","*Slept 1 second","*Maximize Browser Window","*<p>Maximizes current browser window.\x3c/p>","*Click Element","*<p>Click the element identified by <code>locator\x3c/code>.\x3c/p>","*<a href=\"xpath://button[@title='Allow\">xpath://button[@title='Allow\x3c/a> all cookies']","*Clicking element '<a href=\"xpath://button[@title='Allow\">xpath://button[@title='Allow\x3c/a> all cookies']'.","*Page Should Contain","*<p>Verifies that current page contains <code>text\x3c/code>.\x3c/p>","*Create a new account","*Current page contains text 'Create a new account'.","*name:firstname","*Clicking element 'name:firstname'.","*Input Text","*<p>Types the given <code>text\x3c/code> into the text field identified by <code>locator\x3c/code>.\x3c/p>","*name:firstname, Donald","*Typing text 'Donald' into text field 'name:firstname'.","*name:lastname","*Clicking element 'name:lastname'.","*name:lastname, Duck","*Typing text 'Duck' into text field 'name:lastname'.","*id:month","*Clicking element 'id:month'.","*Select From List By Label","*<p>Selects options from selection list <code>locator\x3c/code> by <code>labels\x3c/code>.\x3c/p>","*id:month, Apr","*Selecting options from selection list 'id:month' by label Apr.","*id:day","*Clicking element 'id:day'.","*id:day, 30","*Selecting options from selection list 'id:day' by label 30."]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:00:06","fail":0,"label":"All Tests","pass":1,"skip":0}],[],[{"elapsed":"00:00:06","fail":0,"id":"s1","label":"seleniumTesti","name":"seleniumTesti","pass":1,"skip":0}]];
+window.output["stats"] = [[{"elapsed":"00:00:08","fail":0,"label":"All Tests","pass":1,"skip":0}],[],[{"elapsed":"00:00:08","fail":0,"id":"s1","label":"seleniumTesti","name":"seleniumTesti","pass":1,"skip":0}]];
 </script>
 <script type="text/javascript">
 window.output["errors"] = [];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1694859554118;
+window.output["baseMillis"] = 1694860368641;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 5902;
+window.output["generated"] = 7788;
 </script>
 <script type="text/javascript">
 window.output["expand_keywords"] = null;
